LionsTruck/force-app/main/default/objects/Opportunity/fields/L_ServicesAmount__c.field-meta.xml
<CustomField>
    <fullName>L_ServicesAmount__c</fullName>
    <description>To store services amount value</description>
    <label>Services Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>