LionsTruck/force-app/main/default/objects/Opportunity/fields/L_ServicesQuantity__c.field-meta.xml
<CustomField>
    <fullName>L_ServicesQuantity__c</fullName>
    <description>Purchased services</description>
    <label>Services Quantity</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>