LionsTruck/force-app/main/default/objects/Opportunity/fields/L_TotalAmount__c.field-meta.xml
<CustomField>
    <fullName>L_TotalAmount__c</fullName>
    <description>Truck amount plus services amount</description>
    <formula>L_TrucksAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>