LionsTruck/force-app/main/default/objects/Opportunity/fields/L_TrucksAmount__c.field-meta.xml
<CustomField>
    <fullName>L_TrucksAmount__c</fullName>
    <formula>Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trucks Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>