LionsTruck/force-app/main/default/objects/Opportunity/fields/L_TrucksQuantity__c.field-meta.xml
<CustomField>
    <fullName>L_TrucksQuantity__c</fullName>
    <description>Trucks quantity based on the products added</description>
    <label>Trucks Quantity</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>